log/build_2026-04-29_21-10-31/tensorrt_detect/stderr.log
CMake Deprecation Warning at /home/delphine/open3d-devel-linux-x86_64-cxx11-abi-cuda-0.19.0/lib/cmake/Open3D/Open3DConfig.cmake:18 (cmake_policy):
  The OLD behavior for policy CMP0072 will be removed from a future version
  of CMake.

  The cmake-policies(7) manual explains that the OLD behaviors of all
  policies are deprecated and that a policy should be set to OLD only under
  specific short-term circumstances.  Projects should be ported to the NEW
  behavior and not rely on setting a policy to OLD.
Call Stack (most recent call first):
  CMakeLists.txt:29 (find_package)


/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp: In member function ‘bool CalibrateNode::callVideoPause(bool)’:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:328:58: error: ‘SetBool’ is not a member of ‘std_srvs::srv’
  328 |         auto client = this->create_client<std_srvs::srv::SetBool>("/video_node/set_pause");
      |                                                          ^~~~~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:328:66: error: no matching function for call to ‘CalibrateNode::create_client<<expression error> >(const char [22])’
  328 |         auto client = this->create_client<std_srvs::srv::SetBool>("/video_node/set_pause");
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/rclcpp/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/executors.hpp:22,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:172,
                 from /home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:1:
/opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:271:3: note: candidate: ‘template<class ServiceT> typename rclcpp::Client<ServiceT>::SharedPtr rclcpp::Node::create_client(const std::string&, const rmw_qos_profile_t&, rclcpp::CallbackGroup::SharedPtr)’
  271 |   create_client(
      |   ^~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:271:3: note:   candidate expects 2 arguments, 1 provided
/opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:285:3: note: candidate: ‘template<class ServiceT> typename rclcpp::Client<ServiceT>::SharedPtr rclcpp::Node::create_client(const std::string&, const rclcpp::QoS&, rclcpp::CallbackGroup::SharedPtr)’
  285 |   create_client(
      |   ^~~~~~~~~~~~~
/opt/ros/jazzy/include/rclcpp/rclcpp/node.hpp:285:3: note:   template argument deduction/substitution failed:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:328:66: error: template argument 1 is invalid
  328 |         auto client = this->create_client<std_srvs::srv::SetBool>("/video_node/set_pause");
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:335:56: error: ‘SetBool’ is not a member of ‘std_srvs::srv’
  335 |         auto request = std::make_shared<std_srvs::srv::SetBool::Request>();
      |                                                        ^~~~~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:335:29: error: parse error in template argument list
  335 |         auto request = std::make_shared<std_srvs::srv::SetBool::Request>();
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:335:73: error: no matching function for call to ‘make_shared<<expression error> >()’
  335 |         auto request = std::make_shared<std_srvs::srv::SetBool::Request>();
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /usr/include/c++/13/memory:80,
                 from /opt/ros/jazzy/include/rclcpp/rclcpp/rclcpp.hpp:169:
/usr/include/c++/13/bits/shared_ptr.h:1005:5: note: candidate: ‘template<class _Tp, class ... _Args> std::shared_ptr<typename std::enable_if<(! std::is_array< <template-parameter-1-1> >::value), _Tp>::type> std::make_shared(_Args&& ...)’
 1005 |     make_shared(_Args&&... __args)
      |     ^~~~~~~~~~~
/usr/include/c++/13/bits/shared_ptr.h:1005:5: note:   template argument deduction/substitution failed:
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:335:73: error: template argument 1 is invalid
  335 |         auto request = std::make_shared<std_srvs::srv::SetBool::Request>();
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/delphine/rm/tensorrt10_detect/src/tensorrt_detect/src/nodes/calibrate_node.cpp:353:5: warning: control reaches end of non-void function [-Wreturn-type]
  353 |     }
      |     ^
gmake[2]: *** [CMakeFiles/calibrate_node.dir/build.make:76: CMakeFiles/calibrate_node.dir/src/nodes/calibrate_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:335: CMakeFiles/calibrate_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
